@@ -1,0 +1,6 @@
+<?php
+
+function wfSpecialBlankpage() {
+	global $wgOut;
+	$wgOut->addHTML('intentionallyblankpage');
+}
